testsuite/poke.pkl/return-diag-1.pk
/* { dg-do compile } */

defun bar = int[3] : { return [1,2]; } /* { dg-error "" } */
